[gd_scene load_steps=19 format=3 uid="uid://b5bfm2244ywxk"]

[ext_resource type="Script" path="res://game/game.gd" id="1_ewnxx"]
[ext_resource type="Texture2D" uid="uid://cnlqirgwr8d4" path="res://assets/bkgd/Background.png" id="1_h8otn"]
[ext_resource type="PackedScene" uid="uid://x4qq2j3l7nvb" path="res://game_board/board.tscn" id="2_2ltbx"]
[ext_resource type="PackedScene" uid="uid://d0yw6oyw3qib0" path="res://game/animated_cloud.tscn" id="3_a1y13"]
[ext_resource type="Texture2D" uid="uid://b8biy2iputyhe" path="res://assets/gems/characters_0002.png" id="3_qywvx"]
[ext_resource type="Texture2D" uid="uid://duau66qew6757" path="res://assets/gems/characters_0001.png" id="3_sh4xh"]
[ext_resource type="Theme" uid="uid://c58sv51ac2qkl" path="res://themes/game_top_label_theme.tres" id="4_1evut"]
[ext_resource type="Texture2D" uid="uid://vu6oui2n7024" path="res://assets/gems/characters_0003.png" id="4_2reex"]
[ext_resource type="Theme" uid="uid://1cdmnqyil8gy" path="res://themes/game_stats_label_theme.tres" id="4_xf0vf"]
[ext_resource type="Texture2D" uid="uid://byliae6aa6ki2" path="res://assets/gems/characters_0005.png" id="5_g428h"]
[ext_resource type="Texture2D" uid="uid://2vrsevjv4w43" path="res://assets/gems/characters_0007.png" id="6_ot4tf"]
[ext_resource type="Texture2D" uid="uid://b1o34xq1pq82y" path="res://assets/gems/characters_0006.png" id="7_o4d3d"]
[ext_resource type="AudioStream" uid="uid://ds53xomd2ha1b" path="res://assets/audio/Abstract2.ogg" id="8_7jpwb"]
[ext_resource type="Texture2D" uid="uid://27rcw10bp2xt" path="res://assets/gui/ButtonText_Large_Green_Round.png" id="10_qtl06"]
[ext_resource type="Texture2D" uid="uid://bebhmcgujnoxc" path="res://assets/gui/ButtonText_Large_GreyOutline_Round.png" id="11_bw3je"]
[ext_resource type="Texture2D" uid="uid://dcow071sb2a7i" path="res://assets/gui/ButtonText_Large_Orange_Round.png" id="12_4fgvl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_103kv"]
bg_color = Color(0, 0, 0, 0.666667)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k3sk6"]
bg_color = Color(0, 0, 0, 0.133333)

[node name="Game" type="Node2D"]
script = ExtResource("1_ewnxx")

[node name="Background" type="TextureRect" parent="."]
offset_right = 2000.0
offset_bottom = 1390.0
texture = ExtResource("1_h8otn")
expand_mode = 2

[node name="AnimatedCloud" parent="." instance=ExtResource("3_a1y13")]

[node name="BkgdDimmer" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 2000.0
offset_bottom = 1390.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_103kv")

[node name="GameTopBkgd" type="Panel" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_right = 2000.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k3sk6")

[node name="GameTopHBox" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(2000, 150)
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer1" type="HBoxContainer" parent="GameTopHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="GameTopHBox/HBoxContainer1"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_1evut")
text = "Score "
horizontal_alignment = 2

[node name="Value" type="Label" parent="GameTopHBox/HBoxContainer1"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_1evut")
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="GameTopHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="GameTopHBox/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_1evut")
text = "Moves "
horizontal_alignment = 2

[node name="Value" type="Label" parent="GameTopHBox/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_1evut")
text = "0"

[node name="GameStatsBkgd" type="Panel" parent="."]
offset_left = 75.0
offset_top = 250.0
offset_right = 425.0
offset_bottom = 1274.0
theme_override_styles/panel = SubResource("StyleBoxFlat_k3sk6")

[node name="GameStats" type="VBoxContainer" parent="."]
offset_left = 120.0
offset_top = 250.0
offset_right = 370.0
offset_bottom = 1274.0
theme_override_constants/separation = 40

[node name="HBoxContainer1" type="HBoxContainer" parent="GameStats"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Control" type="Control" parent="GameStats/HBoxContainer1"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="GameStats/HBoxContainer1/Control"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_sh4xh")
centered = false

[node name="Label" type="Label" parent="GameStats/HBoxContainer1"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_xf0vf")
theme_override_font_sizes/font_size = 96
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="GameStats"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Control" type="Control" parent="GameStats/HBoxContainer2"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="GameStats/HBoxContainer2/Control"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_qywvx")
centered = false

[node name="Label" type="Label" parent="GameStats/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_xf0vf")
theme_override_font_sizes/font_size = 96
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="GameStats"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Control" type="Control" parent="GameStats/HBoxContainer3"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="GameStats/HBoxContainer3/Control"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_2reex")
centered = false

[node name="Label" type="Label" parent="GameStats/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_xf0vf")
theme_override_colors/font_color = Color(0.945098, 0.945098, 0.945098, 1)
theme_override_font_sizes/font_size = 96
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="GameStats"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Control" type="Control" parent="GameStats/HBoxContainer4"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="GameStats/HBoxContainer4/Control"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_g428h")
centered = false

[node name="Label" type="Label" parent="GameStats/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_xf0vf")
theme_override_colors/font_color = Color(0.945098, 0.945098, 0.945098, 1)
theme_override_font_sizes/font_size = 96
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="GameStats"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Control" type="Control" parent="GameStats/HBoxContainer5"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="GameStats/HBoxContainer5/Control"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_ot4tf")
centered = false

[node name="Label" type="Label" parent="GameStats/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_xf0vf")
theme_override_colors/font_color = Color(0.945098, 0.945098, 0.945098, 1)
theme_override_font_sizes/font_size = 96
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer6" type="HBoxContainer" parent="GameStats"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Control" type="Control" parent="GameStats/HBoxContainer6"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="GameStats/HBoxContainer6/Control"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_o4d3d")
centered = false

[node name="Label" type="Label" parent="GameStats/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_xf0vf")
theme_override_colors/font_color = Color(0.945098, 0.945098, 0.945098, 1)
theme_override_font_sizes/font_size = 96
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="BoardTextRect" type="Panel" parent="."]
visible = false
offset_left = 500.0
offset_top = 250.0
offset_right = 1524.0
offset_bottom = 1274.0
theme_override_styles/panel = SubResource("StyleBoxFlat_103kv")

[node name="Board" parent="." instance=ExtResource("2_2ltbx")]
position = Vector2(500, 250)

[node name="AudioGemMove" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_7jpwb")

[node name="BtnNewGame" type="TextureButton" parent="."]
offset_left = 1608.0
offset_top = 255.0
offset_right = 2767.0
offset_bottom = 613.0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("10_qtl06")

[node name="Label" type="Label" parent="BtnNewGame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 120
text = "NEW GAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnClearDebugLabels" type="TextureButton" parent="."]
visible = false
offset_left = 1657.0
offset_top = 393.0
offset_right = 2816.0
offset_bottom = 751.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("11_bw3je")

[node name="Label" type="Label" parent="BtnClearDebugLabels"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 120
text = "Clear Labels"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnMatchCol" type="TextureButton" parent="."]
visible = false
offset_left = 1656.0
offset_top = 519.0
offset_right = 2815.0
offset_bottom = 877.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("12_4fgvl")

[node name="Label" type="Label" parent="BtnMatchCol"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 120
text = "CHECKERED"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="BtnNewGame" to="." method="_on_newgame_button_pressed"]
[connection signal="pressed" from="BtnClearDebugLabels" to="." method="_on_btn_clear_debug_labels_pressed"]
[connection signal="pressed" from="BtnMatchCol" to="." method="_on_btn_make_vert_pressed"]
